Filter drawer z-index fix (#530)

--- a/assets/base.css
+++ b/assets/base.css
@@ -693,6 +693,10 @@ summary::-webkit-details-marker {
 
 @media screen and (min-width: 750px) {
   .disclosure-has-popup[open] > summary + * {
+    z-index: 4;
+  }
+
+  .facets .disclosure-has-popup[open] > summary + * {
     z-index: 2;
   }
 }
